Cahnged color of hover on card

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
             top: -100%;
             left: 0;
             position: absolute;
-            background-color: blue;
+            background-color: #0B5ED7;
             z-index: -1;
             transition: 0.4s;
         }
 
         .kart:hover .iconbox{
             background-color:#fff;  
-            color: blue;
+            color: #0B5ED7;
         }
         .kart:hover h5,
         .kart:hover p{
